sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort() 
^AlgCocktailSort1:3: error: expected class or object definition
{
^