sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() 
{
	var i : Int = 0;
	var echEffect : Int = 1;

while (echEffect == 1)
{
	echEffect = 0;
		
	while (i<getNombreValeurs()-1)
	{
		if(plusPetit(i,i+1))
		{
			echange(i,i+1);
			echEffect = 1;
		}
		i=i+1;
	}

	while(i>0)
	{
		if(plusPetit(i,i-1))
		{
			echange(i,i-1);
			echEffect = 1;
		}
		i=i-1;
	}
}
